extras/apigee/api-ingress/kubernetes-manifests/istio-gateway.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: api-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-ingress
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
    - name: transactions
      match:
        - uri:
            prefix: "/transactionhistory/"
        - uri:
            prefix: "/transactionhistory"
      rewrite:
        uri: "/"            
      route:
        - destination:
            host: transactionhistory
            port:
              number: 8080
    - name: balance
      match:
        - uri:
            prefix: "/balancereader/"
        - uri:
            prefix: "/balancereader"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: balancereader
            port:
              number: 8080
    - name: contacts
      match:
        - uri:
            prefix: "/contacts/"
        - uri:
            prefix: "/contacts"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: contacts
            port:
              number: 8080
    - name: userservice
      match:
        - uri:
            prefix: "/userservice/"
        - uri:
            prefix: "/userservice"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: userservice
            port:
              number: 8080
